--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <video width="960" height="" poster="Screenshot 2022-10-22 221421.png" autoplay>
+    <video width="960" height="" controls poster="Screenshot 2022-10-22 221421.png" autoplay>
         <source src="trimmed.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
